# SpsApp

./: .gitignore  README.md  db.js  display.js  filter.js  index-test.html  index.html  script.js  style.css  template.js  templates.js  var.js
assets/img/: loader.aep  loader.psd
assets/src/: buttons.ai  previous.ai
backend/AppsScript/: Code.gs  api.gs
backend/python/: activities.py  db.js
doc/: architecture.vsdx  form.vsdx  ~$$architecture.~vsdx  ~$$form.~vsdx
js/: db.js  display.js  events.js  filter.js  filterMenu.js  filtersMenu.js  language.js  templates.js  utils.js
python/: db.js  main.py  pyproject.toml
